<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_tour"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_proxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/narrator"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/member"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/personal_tour"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/personal"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>