<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:text="@string/search_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_address"
                android:id="@+id/imageView13" />

            <ToggleButton
                android:text="ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:text="@string/search_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_public_cyan_700_24dp"
                android:id="@+id/imageView14" />

            <ToggleButton
                android:text="ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:text="@string/search_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_add"
                android:id="@+id/imageView15" />

            <ToggleButton
                android:text="ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton4" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_distance"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/textView15" />

        <TextView
            android:text="@string/search_range_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </RelativeLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar_distance"
        android:max="20000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/search_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textView16"
            android:id="@+id/text_number" />
    </RelativeLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar_number"
        android:max="100" />

    <CheckBox
        android:text="@string/setting_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox_set" />

</LinearLayout>
